Remove temporary variables in ArgumentParticleTests.java