@@ -132,11 +132,7 @@ class ArgumentParticleTests extends TestBase {
 		// caps it off at 4.
 		int size = ThreadLocalRandom.current().nextInt(1, 5);
 
-		String redValue = String.format(Locale.ENGLISH, "%.2f", red);
-		String greenValue = String.format(Locale.ENGLISH, "%.2f", green);
-		String blueValue = String.format(Locale.ENGLISH, "%.2f", blue);
-
-		server.dispatchCommand(player, "test dust %s %s %s %d".formatted(redValue, greenValue, blueValue, size));
+		server.dispatchCommand(player, "test dust %s %s %s %d".formatted(red, green, blue, size));
 		@SuppressWarnings("unchecked")
 		ParticleData<DustOptions> result = (ParticleData<DustOptions>) results.get();
 
